--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
     implementation "com.android.support:appcompat-v7:${safeExtGet('supportLibVersion', '+')}"
     implementation "com.android.support:mediarouter-v7:${safeExtGet('supportLibVersion', '+')}"
-    implementation "com.google.android.gms:play-services-cast-framework:${safeExtGet('castFrameworkVersion', '16.2.0')}"
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation "com.google.android.gms:play-services-cast-framework:${safeExtGet('castFrameworkVersion', '19.0.0')}"
 }
