--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -7,14 +7,14 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
-        castFrameworkVersion = '16.1.2'
+        castFrameworkVersion = '19.0.0'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.4.0")
+        classpath('com.android.tools.build:gradle:4.1.1')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
